# avdoc-cli

./: Cargo.toml  README.md  install.ps1  install.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/ai/: llm_client.rs  mod.rs
src/analyzer/: architecture.rs  doc_score.rs  mod.rs
src/cli/: diagram.rs  heal.rs  lint.rs  mod.rs
src/diagram/: mermaid.rs
src/markdown/: mod.rs  readme_updater.rs
src/models/: function.rs  mod.rs  repo.rs  service.rs
src/parser/: go_parser.rs  js_parser.rs  mod.rs  python_parser.rs
src/scanner/: mod.rs  repo_scanner.rs
