[package]
name = "avdoc"
version = "0.1.0"
edition = "2021"
description = "High-performance documentation linter for codebases"
license = "MIT"
authors = ["Aryan Vishwakarma"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1"
colored = "3.1.1"
anyhow = "1"
ignore = "0.4.25"
tree-sitter = "0.26.6"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
glob = "0.3.3"
serde_json = "1.0.149"
toml = "1.0.6"
indicatif = "0.18.4"
ratatui = "0.30.0"
pulldown-cmark = "0.13.1"
pulldown-cmark-to-cmark = "22.0.0"
regex = "1.12.3"
dialoguer = "0.12.0"
